--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "react-native": "0.79.5",
     "axios": "*",
     "expo-blur": "~14.1.5",
-    "expo-font": "~13.3.1",
+    "expo-font": "~13.3.2",
     "@lucide/lab": "^0.1.2",
-    "expo-camera": "~16.1.9",
-    "expo-router": "~5.1.1",
+    "expo-camera": "~16.1.10",
+    "expo-router": "~5.1.3",
     "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.5",
+    "expo-linking": "~7.1.7",
     "expo-symbols": "~0.4.5",
-    "expo-constants": "~17.1.6",
-    "expo-system-ui": "~5.0.9",
+    "expo-constants": "~17.1.7",
+    "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "react-native-svg": "15.11.2",
     "@expo/vector-icons": "^14.1.0",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "lucide-react-native": "^0.475.0",
     "expo-linear-gradient": "~14.1.5",
     "react-native-screens": "~4.11.1",
@@ -35,11 +35,14 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@react-navigation/native": "^7.0.14",
     "react-native-url-polyfill": "^2.0.0",
+    "@react-native-picker/picker": "2.11.1",
     "react-native-gesture-handler": "~2.24.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/drawer": "*",
+    "expo-clipboard": "~7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
