--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-webview": "13.13.5",
     "react-native-reanimated": "~3.17.4",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/drawer": "*",
     "@react-navigation/native": "^7.0.14",
     "react-native-url-polyfill": "^2.0.0",
     "@react-native-picker/picker": "2.11.1",
@@ -40,9 +41,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/drawer": "*",
-    "expo-clipboard": "~7.1.5"
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
