basic user information update implemented and additional screens created

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-clipboard/clipboard": "*",
+    "react-native-macos": "^0.61.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
