--- a/package.json
+++ b/package.json
@@ -3,50 +3,52 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.17",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "axios": "*",
-    "expo-blur": "~14.1.5",
-    "expo-font": "~13.3.2",
-    "@lucide/lab": "^0.1.2",
-    "expo-camera": "~16.1.10",
-    "expo-router": "~5.1.3",
-    "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-symbols": "~0.4.5",
-    "expo-constants": "~17.1.7",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
-    "react-native-svg": "15.11.2",
-    "@expo/vector-icons": "^14.1.0",
-    "expo-splash-screen": "~0.30.10",
-    "lucide-react-native": "^0.475.0",
-    "expo-linear-gradient": "~14.1.5",
-    "react-native-screens": "~4.11.1",
-    "react-native-webview": "13.13.5",
-    "react-native-reanimated": "~3.17.4",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/vector-icons": "^14.1.0",
+    "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "*",
     "@react-navigation/native": "^7.0.14",
-    "react-native-url-polyfill": "^2.0.0",
-    "@react-native-picker/picker": "2.11.1",
-    "react-native-gesture-handler": "~2.24.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "*",
+    "axios": "*",
+    "expo": "~53.0.17",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.3",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
+    "lucide-react-native": "^0.475.0",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "name": "mobile-app",
+  "version": "1.0.0"
 }
